makes images responsive and prevents weird spacing by removing default inline behaviour

--- a/reset.css
+++ b/reset.css
@@ -16,3 +16,8 @@ body {
   color: #333;
   background-color: #fff;
 }
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
